use error handler to catch all forms errors

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,6 @@
 .ant-form-item input {
   min-width: 200px;
 }
-.ant-form-item-explain [role='alert'],
-.ant-notification-notice-description {
+.ant-form-item-explain [role='alert'] {
   white-space: pre;
 }
