--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/100.otf');
+  font-weight: 100;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/200.otf');
+  font-weight: 200;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/300.otf');
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/400.otf');
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/500.otf');
+  font-weight: 500;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/600.otf');
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/700.otf');
+  font-weight: 700;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/800.otf');
+  font-weight: 800;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url('./assets/fonts/Metropolis/900.otf');
+  font-weight: 900;
+}
+
 /* overridding ant design default bugs */
 .ant-form-item input {
   min-width: 200px;
@@ -9,6 +55,12 @@
 .ant-form-item-explain [role='alert'] {
   white-space: pre;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 p {
   margin: 0 !important;
 }
